--- a/View/Node/NodeEndMA.xaml
+++ b/View/Node/NodeEndMA.xaml
@@ -2,6 +2,7 @@
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:v="clr-namespace:MultiBranchTexter.View"
+            xmlns:r="clr-namespace:MultiBranchTexter.Resources"
             Loaded="NodeBase_Loaded">
     <Grid>
         <Grid.RowDefinitions>
@@ -17,16 +18,22 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <CheckBox x:Name="isQuestionBtn" Grid.Column="0" ToolTip="切换询问或判断"
+                <CheckBox x:Name="isQuestionBtn" Grid.Column="0"
                           Click="IsQuestionBtn_Click"
                           Foreground="{DynamicResource Foreground.BaseBrush}"
                           Template="{StaticResource textCheckTemplate}">
                     <CheckBox.Style>
                         <Style TargetType="{x:Type CheckBox}">
-                            <Setter Property="Content" Value="判断"/>
+                            <Setter Property="Content" 
+                                    Value="{Binding [N_Check], Source={x:Static r:LanguageManager.Instance}}"/>
+                            <Setter Property="ToolTip" 
+                                    Value="{Binding [N_ToQuestion], Source={x:Static r:LanguageManager.Instance}}"/>
                             <Style.Triggers>
                                 <Trigger Property="IsChecked" Value="True">
-                                    <Setter Property="Content" Value="询问"/>
+                                    <Setter Property="Content" 
+                                            Value="{Binding [N_Question], Source={x:Static r:LanguageManager.Instance}}"/>
+                                    <Setter Property="ToolTip" 
+                                            Value="{Binding [N_ToCheck], Source={x:Static r:LanguageManager.Instance}}"/>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
