--- a/View/NodeSearchBox.xaml
+++ b/View/NodeSearchBox.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="MultiBranchTexter.View.NodeSearchBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:r="clr-namespace:MultiBranchTexter.Resources"
              Height="54" Width="160">
     <Grid Background="{DynamicResource ThemeBrush}">
         <Grid.RowDefinitions>
@@ -12,7 +13,8 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="24"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="搜索标题" Foreground="{DynamicResource Foreground.ThemeBrush}"
+        <TextBlock Text="{Binding [FCC_SearchTitle], Source={x:Static r:LanguageManager.Instance}}" 
+                   Foreground="{DynamicResource Foreground.ThemeBrush}"
                    Margin="4" VerticalAlignment="Center"/>
         <Button x:Name="closeBtn" Grid.Column="1" Margin="2" 
                 Template="{DynamicResource searchBoxBtnTemp}"
