--- a/View/Panel/FlowChartContainer.xaml
+++ b/View/Panel/FlowChartContainer.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:v="clr-namespace:MultiBranchTexter.View"
+             xmlns:r="clr-namespace:MultiBranchTexter.Resources"
              xmlns:vm="clr-namespace:MultiBranchTexter.ViewModel">
     <UserControl.DataContext>
         <vm:FCCViewModel/>
@@ -41,23 +42,32 @@
             </v:AutoSizeCanvas>
             <v:MBScViewer.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="新建节点(Ctrl+N)" Command="{Binding NewNodeCommand}"/>
-                    <MenuItem Header="统一横坐标" IsEnabled="{Binding SelectedNodes,
+                    <MenuItem Header="{Binding [FCC_NewNode], Source={x:Static r:LanguageManager.Instance}}" 
+                              Command="{Binding NewNodeCommand}"/>
+                    <MenuItem Header="{Binding [FCC_UniteX], Source={x:Static r:LanguageManager.Instance}}" 
+                              IsEnabled="{Binding SelectedNodes,
                         Converter={StaticResource listToBoolCvt}, ConverterParameter=1}">
-                        <MenuItem Header="平均值" Command="{Binding UniteXCommand}"
+                        <MenuItem Header="{Binding [FCC_Avg], Source={x:Static r:LanguageManager.Instance}}" 
+                                  Command="{Binding UniteXCommand}"
                                   CommandParameter="avg"/>
-                        <MenuItem Header="最小值" Command="{Binding UniteXCommand}"
+                        <MenuItem Header="{Binding [FCC_Min], Source={x:Static r:LanguageManager.Instance}}" 
+                                  Command="{Binding UniteXCommand}"
                                   CommandParameter="min"/>
-                        <MenuItem Header="最大值" Command="{Binding UniteXCommand}"
+                        <MenuItem Header="{Binding [FCC_Max], Source={x:Static r:LanguageManager.Instance}}"
+                                  Command="{Binding UniteXCommand}"
                                   CommandParameter="max"/>
                     </MenuItem>
-                    <MenuItem Header="统一纵坐标" IsEnabled="{Binding SelectedNodes,
+                    <MenuItem Header="{Binding [FCC_UniteY], Source={x:Static r:LanguageManager.Instance}}" 
+                              IsEnabled="{Binding SelectedNodes,
                         Converter={StaticResource listToBoolCvt}, ConverterParameter=1}">
-                        <MenuItem Header="平均值" Command="{Binding UniteYCommand}"
+                        <MenuItem Header="{Binding [FCC_Avg], Source={x:Static r:LanguageManager.Instance}}" 
+                                  Command="{Binding UniteYCommand}"
                                   CommandParameter="avg"/>
-                        <MenuItem Header="最小值" Command="{Binding UniteYCommand}"
+                        <MenuItem Header="{Binding [FCC_Min], Source={x:Static r:LanguageManager.Instance}}" 
+                                  Command="{Binding UniteYCommand}"
                                   CommandParameter="min"/>
-                        <MenuItem Header="最大值" Command="{Binding UniteYCommand}"
+                        <MenuItem Header="{Binding [FCC_Max], Source={x:Static r:LanguageManager.Instance}}"
+                                  Command="{Binding UniteYCommand}"
                                   CommandParameter="max"/>
                     </MenuItem>
                     <MenuItem Header="删除节点(Delete)" Command="{Binding DeleteCommand}"
@@ -91,7 +101,8 @@
         <!--下方信息栏-->
         <StackPanel Orientation="Horizontal" Grid.Row="1" 
                     VerticalAlignment="Stretch" HorizontalAlignment="Right">
-            <Button Content="重新排列" Template="{StaticResource textButtonTemplate}"
+            <Button Content="{Binding [FCC_Rearrange], Source={x:Static r:LanguageManager.Instance}}"
+                    Template="{StaticResource textButtonTemplate}"
                     Command="{Binding ReArrangeCommand}"/>
             <Rectangle Width="1" Fill="{DynamicResource Foreground.ThemeBrush}" Margin="4,0,4,0"/>
             <TextBlock Text="{Binding ScaleRatio, Converter={StaticResource numToPerCvt}, ElementName=container}" 
@@ -99,20 +110,20 @@
                        VerticalAlignment="Center"
                        Margin="4,0,4,0"/>
             <Rectangle Width="1" Fill="{DynamicResource Foreground.ThemeBrush}" Margin="4,0,4,0"/>
-            <TextBlock Text="节点数：" Margin="8,0,0,0"
-                       VerticalAlignment="Center"
+            <TextBlock Text="{Binding [FCC_NodeCount], Source={x:Static r:LanguageManager.Instance}}"
+                       Margin="8,0,0,0" VerticalAlignment="Center"
                        Foreground="{DynamicResource Foreground.ThemeBrush}"/>
             <TextBlock Text="{Binding NodeCount}" Margin="0,0,8,0"
                        VerticalAlignment="Center"
                        Foreground="{DynamicResource Foreground.ThemeBrush}"/>
-            <TextBlock Text="总词数：" Margin="8,0,0,0"
-                       VerticalAlignment="Center"
+            <TextBlock Text="{Binding [FCC_WordCount], Source={x:Static r:LanguageManager.Instance}}"
+                       Margin="8,0,0,0" VerticalAlignment="Center"
                        Foreground="{DynamicResource Foreground.ThemeBrush}"/>
             <TextBlock Margin="0,0,8,0"  Text="{Binding WordCount}"
                        VerticalAlignment="Center" 
                        Foreground="{DynamicResource Foreground.ThemeBrush}"/>
-            <TextBlock Text="总字数：" Margin="8,0,0,0"
-                       VerticalAlignment="Center"
+            <TextBlock Text="{Binding [FCC_CharCount], Source={x:Static r:LanguageManager.Instance}}"
+                       Margin="8,0,0,0" VerticalAlignment="Center"
                        Foreground="{DynamicResource Foreground.ThemeBrush}"/>
             <TextBlock Margin="0,0,8,0"  Text="{Binding CharCount}"
                        VerticalAlignment="Center" 
