--- a/View/TextTab/TabEndItem.xaml
+++ b/View/TextTab/TabEndItem.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="MultiBranchTexter.View.TabEndItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:r="clr-namespace:MultiBranchTexter.Resources"
              Height="20">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -20,7 +21,8 @@
         <TextBlock x:Name="postNameTxt" Grid.Column="2" Margin="4,2,4,2"
                    Foreground="{DynamicResource Foreground.BaseBrush}"
                    HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button x:Name="nextBtn" Grid.Column="3" ToolTip="转到相应节点" Tag="f"
+        <Button x:Name="nextBtn" Grid.Column="3" Tag="f"
+                ToolTip="{Binding [Tab_ToNode], Source={x:Static r:LanguageManager.Instance}}"
                 Click="NextBtn_Click" Template="{DynamicResource generalButtonTemplate}"
                 Content="M0,0 0,8 6,4Z"/>
     </Grid>
